# smart-contract-deployer

./: .dockerignore  .env-sample  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  brownie-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
api/: app.py
app/: app.py
docs/: local-setup.md  setup.md
scripts/: deploy.py
