[tool.poetry]
name = "smart-contract-deployer"
version = "0.1.0"
description = "A template based Smart Contract deployer using APIs"
authors = ["Jeevan Jamakayala <jeevan.jamakayala@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
eth-brownie = "^1.18.1"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
pathvalidate = "^2.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
